--- a/curso-iniciando-ionic-2/app/app.html
+++ b/curso-iniciando-ionic-2/app/app.html
@@ -1,11 +1,26 @@
-<ion-menu [content]="menuContent">
+<ion-menu [content]="menuContent" id="menu1" persistent="true">
   <ion-toolbar>
     <ion-title>Menu Principal</ion-title>
   </ion-toolbar>
 
   <ion-content>
     <ion-list>
-      <button ion-item *ngFor="let p of pages" (click)="openPage(p)" menuToggle>
+      <button ion-item *ngFor="let p of pages" (click)="openPage(p, 'menu1')">
+        <ion-icon name="{{ p.icon }}"></ion-icon>
+        {{ p.title }}
+      </button>
+    </ion-list>
+  </ion-content>
+</ion-menu>
+
+<ion-menu [content]="menuContent" side="right" type="push" id="menu2" persistent="true">
+  <ion-toolbar>
+    <ion-title>Menu Secundario</ion-title>
+  </ion-toolbar>
+
+  <ion-content>
+    <ion-list>
+      <button ion-item *ngFor="let p of pages" (click)="openPage(p, 'menu2')">
         <ion-icon name="{{ p.icon }}"></ion-icon>
         {{ p.title }}
       </button>
