--- a/curso-iniciando-ionic-2/app/pages/home/home.html
+++ b/curso-iniciando-ionic-2/app/pages/home/home.html
@@ -6,6 +6,11 @@
     <ion-title>
       Ionic Blank
     </ion-title>
+    <ion-buttons end>
+      <button menuToggle="right">
+        <ion-icon name="menu"></ion-icon>
+      </button>
+    </ion-buttons>
   </ion-navbar>
 </ion-header>
 
@@ -14,4 +19,6 @@
   <p>
     If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
   </p>
+
+  <button block (click)="pushPage()">Open new Page</button>
 </ion-content>
