--- a/curso-iniciando-ionic-2/app/pages/menu-test/menu-test.html
+++ b/curso-iniciando-ionic-2/app/pages/menu-test/menu-test.html
@@ -5,6 +5,13 @@
       <ion-icon name="menu"></ion-icon>
     </button>
     <ion-title>Menu Test</ion-title>
+
+    <ion-buttons end>
+      <button menuToggle="right">
+        <ion-icon name="menu"></ion-icon>
+      </button>
+    </ion-buttons>
+    
   </ion-navbar>
 
 </ion-header>
