Listas, Inputs, Cards e outros componentes

--- a/curso-iniciando-ionic-2/app/pages/menu-test/menu-test.html
+++ b/curso-iniciando-ionic-2/app/pages/menu-test/menu-test.html
@@ -11,12 +11,14 @@
         <ion-icon name="menu"></ion-icon>
       </button>
     </ion-buttons>
-    
+
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
-
+<p>
+  {{ 'Olá mundo'| lowercase }}
+</p>
 </ion-content>
